--- a/doc/bugs/disabling_backlinks.mdwn
+++ b/doc/bugs/disabling_backlinks.mdwn
@@ -10,4 +10,5 @@ My first reading (and second and third) of this was that backlinks would be disa
 --[[KarlMW]]
 
 > Yes, it only controls the number of backlinks that are shown at the
-> bottom of the page vs how many are moved to the popup --[[Joey]]
+> bottom of the page vs how many are moved to the popup. I've tried to
+> improve the documentation for this. [[done]] --[[Joey]]
