--- a/doc/bugs/discussion_removal.mdwn
+++ b/doc/bugs/discussion_removal.mdwn
@@ -1,3 +1,5 @@
 If a page has a discussion page, which is then removed, ikiwiki seems not
 to notice that the discussion page has gone away, and does not update the
 link to it in the action bar.
+
+> Reprocued with 2.5 --[[Joey]]
