--- a/doc/todo/Does_not_support_non-UTF8_files.mdwn
+++ b/doc/todo/Does_not_support_non-UTF8_files.mdwn
@@ -3,3 +3,5 @@ Ikiwiki does not seem to support non-UTF-8 file content, although there's no rea
     Malformed UTF-8 character (unexpected non-continuation byte 0x74, immediately after start byte 0xe4) in substitution iterator at /usr/local/share/perl/5.8.8/IkiWiki.pm line 640.
 
 I hope Ikiwiki is not part of the UTF-8 monoculturist movement...
+
+[[wishlist]]
