--- a/doc/todo/assumes_system_perl.mdwn
+++ b/doc/todo/assumes_system_perl.mdwn
@@ -12,3 +12,5 @@ The installed bin/ikiwiki file also refers to /usr/bin/perl rather than the perl
 > I will acdept sufficiently nonintrusive patches to make ikiwiki work better on strange systems like
 > yours, but do not plan to work on it myself, since I do not use systems
 > where /usr/bin/perl is not a sane default. --[[Joey]]
+
+[[wishlist]]
