--- a/doc/todo/should_use_a_standard_encoding_for_utf_chars_in_filenames.mdwn
+++ b/doc/todo/should_use_a_standard_encoding_for_utf_chars_in_filenames.mdwn
@@ -57,3 +57,5 @@ I hope it's a bug, not a feature and you fix it soon :) --[[Paweł|ptecza]]
 
 >>>>> There is a Perl [Unicode::IMAPUtf7](http://search.cpan.org/~fabpot/Unicode-IMAPUtf7-2.01/lib/Unicode/IMAPUtf7.pm)
 >>>>> module at the CPAN, but probably it hasn't been debianized yet :( --[[Paweł|ptecza]]
+
+[[wishlist]]
