--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -236,8 +236,9 @@ configuration options of their own.
 
 * --numbacklinks n
 
-  Controls how many backlinks should be displayed maximum. Excess backlinks
-  will be hidden in a popup. Default is 10. Set to 0 to disable this feature.
+  Controls how many backlinks should be displayed at the bottom of a page.
+  Excess backlinks will be hidden in a popup. Default is 10. Set to 0 to
+  disable this feature.
 
 * --userdir subdir
 
