--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -1,6 +1,7 @@
 This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done.
 
-Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
+Also see the [Debian bugs](http://bugs.debian.org/ikiwiki), and the
+[[TODO]] page.
 
 [[inline pages="bugs/* and !bugs/done and !bugs/discussion and 
 !link(bugs/done) and !bugs/*/*"
