--- a/doc/todo/Add_showdown_GUI_input__47__edit.mdwn
+++ b/doc/todo/Add_showdown_GUI_input__47__edit.mdwn
@@ -10,3 +10,6 @@ A demo is at <http://www.attacklab.net/showdown-gui.html>
 > is that it provides a GUI for editing with widets for italics, etc,
 > compared to showdown which still leaves input in markdown and seems more
 > geared to a fast preview of the html. --[[Joey]]
+
+> Since we have semi-working wikiwgy and it's better, I'm considering this
+> todo item as [[done]] or rather, will-not-be-done..
