--- a/doc/todo/BibTeX.mdwn
+++ b/doc/todo/BibTeX.mdwn
@@ -2,4 +2,4 @@ I would *love* to see a plugin that lets you create one or more BibTeX-formatted
 
 --[[JoshTriplett]]
 
-[[tag soc]]
+[[tag soc]] [[tag wishlist]]
