--- a/doc/todo/IRC_topic.mdwn
+++ b/doc/todo/IRC_topic.mdwn
@@ -6,3 +6,5 @@ in version control. --[[JoshTriplett]]
 A simple script should be able to poll for the irc topic and update a page,
 then run ikiwiki -refresh to update the wiki. No need to put that in
 ikiwiki or a plugin, though. --[[Joey]]
+
+[[wishlist]]
