--- a/doc/todo/Improve_signin_form_layout.mdwn
+++ b/doc/todo/Improve_signin_form_layout.mdwn
@@ -38,4 +38,7 @@ just have to get stylin'. :-)
 That looks pretty good.. putting the passwordauth part in a box of its own with
 the submit buttons I don't know how to do.
 
+I'm happy enough with what we have now though, with the above improvements.
+Hope you are too, as I'm calling this [[done]]..
+
 --[[Joey]]
