--- a/doc/todo/Plugins_to_provide___34__add_to__34___links_for_popular_feed_readers.mdwn
+++ b/doc/todo/Plugins_to_provide___34__add_to__34___links_for_popular_feed_readers.mdwn
@@ -2,3 +2,5 @@ ikiwiki could provide one or more plugins that provide "add to" links for popula
 
 Potentially less useful given an implementation of [[todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism]].
 --[[JoshTriplett]]
+
+[[wishlist]]
