--- a/doc/todo/Support_XML-RPC-based_blogging.mdwn
+++ b/doc/todo/Support_XML-RPC-based_blogging.mdwn
@@ -10,3 +10,5 @@ blog names would work. --[[JoshTriplett]]
 >> I'd love to see support for this and would be happy to contribute towards a bounty (say US$100) :-).  [PmWiki](http://www.pmwiki.org/) has a plugin which [implements this](http://www.pmwiki.org/wiki/Cookbook/XMLRPC) in a way which seems fairly sensible as an end user.  --[[AdamShand]]
 
 [[tag soc]]
+
+[[tag wishlist]]
