--- a/doc/todo/block_external_links.mdwn
+++ b/doc/todo/block_external_links.mdwn
@@ -12,3 +12,5 @@ This may actually form a subset of the general concept of content policies,
 described at [[todo/fileupload]].
 
 --[[JoshTriplett]]
+
+[[wishlist]]
