--- a/doc/todo/canonical_feed_location.mdwn
+++ b/doc/todo/canonical_feed_location.mdwn
@@ -12,3 +12,5 @@ with all news or the one with the latest news only, I don't know yet.)
 >> That wouldn't use the same style for the RSS and Atom links, and it
 >> wouldn't embed the feed link into `<head>` so that browsers can automatically
 >> find it.
+
+[[tag wishlist]]
