--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -2,3 +2,5 @@ Create some nice(r) stylesheets.
 
 Should be doable w/o touching a single line of code, just
 editing the [[wikitemplates]] and/or editing [[style.css]].
+
+[[done]] ([[css_market]] ..)
