--- a/doc/todo/ikibot.mdwn
+++ b/doc/todo/ikibot.mdwn
@@ -5,3 +5,5 @@ Random idea: create an ikiwiki IRC bot, which notices the use of ikiwiki syntax 
     <ikibot> http://ikiwiki.info/setup.html: "This tutorial will walk you through setting up a wiki with ikiwiki. ..."
 
 --[[JoshTriplett]]
+
+[[wishlist]]
