--- a/doc/todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism.mdwn
+++ b/doc/todo/integration_with_Firefox_and_Iceweasel_feed_subscription_mechanism.mdwn
@@ -9,3 +9,5 @@ configure their browser to subscribe to feeds via [[plugins/aggregate]] running
 on their site.  We could then provide the manual configuration settings as a
 [[tip|tips]], and perhaps provide an extension or other mechanism to set them
 automatically. --[[JoshTriplett]]
+
+[[wishlist]]
