--- a/doc/todo/linktitle.mdwn
+++ b/doc/todo/linktitle.mdwn
@@ -15,3 +15,5 @@ second version did not exist, the first version would apply to both cases.
 However, that also seems like potential overkill, and less important than the
 basic functionality of `linktitle`.
 --[[JoshTriplett]]
+
+[[wishlist]]
