--- a/doc/todo/spell_check_plug-in.mdwn
+++ b/doc/todo/spell_check_plug-in.mdwn
@@ -7,3 +7,6 @@ Knot adz fair ass eye no --[[Joey]]
 ----
 
 Firefox 2 (or whatever it will be in Debian) does this for you, and then there's the mozex extension
+
+> Yeah, IMHO gecko's spellchecker nailed this. Spellcheckers server-side
+> are now passe. Calling this [[done]] --[[Joey]]
