--- a/doc/todo/tags.mdwn
+++ b/doc/todo/tags.mdwn
@@ -8,3 +8,5 @@ Stuff still needing to be done with tags:
 
   This is one good argument for changing ikiwiki so that pages are all
   dir/index.html, then a link to just "dir" works.
+
+  So this could be implemented now for userdirs wikis..
