--- a/doc/todo/web-based_image_editing.mdwn
+++ b/doc/todo/web-based_image_editing.mdwn
@@ -1,1 +1,3 @@
 We could support web-based image editing, using something like [Snipshot](http://snipshot.com/).  Several comparisons of web-based image editors exist; we would need to choose which one(s) to support. --[[JoshTriplett]]
+
+[[wishlist]]
