--- a/doc/todo/web_gui_for_managing_tags.mdwn
+++ b/doc/todo/web_gui_for_managing_tags.mdwn
@@ -8,3 +8,5 @@ As with [[default_content_for_new_post]] I understand that this falls into a bit
 MoinMoin has a simple implementation of this, [click here to see an example](http://www.spack.org/wiki/SandBox?action=edit&editor=text).
 
 --[[AdamShand]]
+
+[[tag wishlist]]
