--- a/doc/todo/wikiwyg.mdwn
+++ b/doc/todo/wikiwyg.mdwn
@@ -23,3 +23,5 @@ problem. According to the developers, it is possible to do that, and start
 off in WikiText mode.
 
 [[tag soc]]
+
+[[tag wishlist]]
