--- a/doc/todo/BTS_integration.mdwn
+++ b/doc/todo/BTS_integration.mdwn
@@ -7,3 +7,5 @@ This seems somewhat difficult, as ikiwiki would need to maintain a cache of the 
 [scmbug](http://www.mkgnu.net/?q=scmbug) might help here. --[[JoshTriplett]]
 
 [[tag soc]]
+
+[[tag wishlist]]
