--- a/doc/todo/OpenSearch.mdwn
+++ b/doc/todo/OpenSearch.mdwn
@@ -14,3 +14,5 @@ information in `ikiwiki.setup`, and the `title` attribute of the `link` should
 contain the wiki title from `ikiwiki.setup`.
 
 --[[JoshTriplett]]
+
+[[wishlist]]
