--- a/doc/todo/allow_full_post_from_the___34__add_a_new_post__34___form.mdwn
+++ b/doc/todo/allow_full_post_from_the___34__add_a_new_post__34___form.mdwn
@@ -8,3 +8,5 @@ comment form.
 
 > I agree that having this as an option is reasonable. Although it would
 > take a fair amount of work. --[[Joey]]
+
+[[tag wishlist]]
