move to todo, and mark done rather than just deleting

--- a/doc/todo/FormBuilder__95__Template__95__patch.mdwn
+++ b/doc/todo/FormBuilder__95__Template__95__patch.mdwn
@@ -6,3 +6,5 @@ It can be downloaded from <http://ikiwiki.xbaud.com/FormBuilder_Templates_patch.
 
 I think I've fixed this in a different way. Please let me know if the fix
 somehow doesn't work well enough. --[[Joey]]
+
+[[done]](?)
