massive patchqueue reorg
patches can now be anywhere and tagged patch to show up on the patch list.
Moved all the patchqueue stuff to todo items; some of it was merged into
existing todo items.

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -36,7 +36,7 @@ W "belongs" to ikiwiki and should not be edited directly.
 
 Support for using darcs as a backend is being worked on by [Thomas
 Schwinge](mailto:tschwinge@gnu.org), although development is on hold curretly.
-There is a patch in the [[patchqueue]].
+There is a patch in [[todo/darcs]].
 
 ### How will it work internally?
 
@@ -114,7 +114,7 @@ towards transmitting changes with standalone patch bundles (often by email) as d
 >> IMHO it comes down to whatever works well for a given RCS. Seems like
 >> the darcs approach _could_ be done with most any distributed system, but
 >> it might be overkill for some (or all?) While there is the incomplete darcs
->> plugin in the [[patchqueue]], if you submit one that's complete, I will
+>> plugin in [[todo/darcs]], if you submit one that's complete, I will
 >> probably accept it into ikiwiki.. --[[Joey]]
 
 ## [[Git]]
