--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -4,6 +4,6 @@ Also see the [Debian bugs](http://bugs.debian.org/ikiwiki), and the
 [[TODO]] page.
 
 [[inline pages="bugs/* and !bugs/done and !bugs/discussion and 
-!link(bugs/done) and !bugs/*/*"
+!link(patch) and !link(bugs/done) and !bugs/*/*"
 feedpages="created_after(bugs/no_commit_mails_for_new_pages)"
 actions=yes rootpage="bugs" postformtext="Add a new bug titled:" show=0]]
