--- a/doc/bugs/hardcoded___34__Discussion__34___link.mdwn
+++ b/doc/bugs/hardcoded___34__Discussion__34___link.mdwn
@@ -24,7 +24,7 @@ or "History". --[[Paweł|ptecza]]
 >>> existing/nonexisting page in two places, one in code in ikiwiki and one
 >>> in the template. Not good design. --[[Joey]]
  
-> As noted in [[patchqueue/l10n]], there are some other places in ikiwiki
+> As noted in [[todo/l10n]], there are some other places in ikiwiki
 > that hard code English strings, and I feel that using standard gettext
 > and po files is the best approach for these, although Recai suggested an
 > approach of translating the strings using a template file. --[[Joey]]
