--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -28,8 +28,7 @@ Thanks! --[[Joey]]
   developed, and is being written with security as a priority, so don't
   expect things to stay in this list for long.
 
-* Developers, please document any ikiwiki patches you have in the
-  [[PatchQueue]].
+* Developers, please document any ikiwiki [[patches|patch]] you have.
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
