--- a/doc/roadmap/discussion.mdwn
+++ b/doc/roadmap/discussion.mdwn
@@ -12,7 +12,7 @@ them to be absolute, but I definitely remember tripping over absolute
 pagespecs a few times when I was just starting out. Thus I think we've
 learned to accept it as natural, where a new user wouldn't.
 
-* bugs, todo, news, blog, users, sandbox, and patchqueue 
+* bugs, todo, news, blog, users, and sandbox
   are all at "toplevel", so they are equivalent whether 
   pagespecs are absolute or relative.
 * soc doesn't refer to any pages explicitly so it doesn't matter
