--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -14,10 +14,10 @@ the following projects will be worked on:
   (See [[todo/fileupload/soc-proposal]])
 * Wiki WYSIWYG Editor  
   by [[TaylorKillian]]  
-  (See [[patchqueue/Wikiwyg_Plugin_for_IkiWiki]])
+  (See [[todo/wikiwyg]])
 * Creating a gallery of a bunch of images  
   by [[ArpitJain]]  
-  (See [[patchqueue/Gallery_Plugin_for_Ikiwiki]])
+  (See [[todo/Gallery]])
 
 Students working on these projects are encouraged to add links to any blogs,
 patch repositories, etc that they will use.
