--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -3,6 +3,6 @@ Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
 Also see the [[wishlist]] and [[bugs]] pages.
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
-!link(wishlist) and !todo/*/*"
+!link(patch) and !link(wishlist) and !todo/*/*"
 feedpages="created_after(todo/supporting_comments_via_disussion_pages)"
 actions=yes rootpage="todo" postformtext="Add a new todo item titled:" show=0]]
