--- a/doc/todo/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
+++ b/doc/todo/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
@@ -28,13 +28,14 @@ The year and month entities in the out put have links to archive index pages, wh
 
 I'll send in the patch via email.
 
-
 ManojSrivastava
 
 ------
 
 Since this is a little bit er, stalled, I'll post here the stuff Manoj
 mailed me, and my response to it. --[[Joey]]
+
+[[tag patch]]
 
 <pre>
 #! /usr/bin/perl
