--- a/doc/todo/format_escape.mdwn
+++ b/doc/todo/format_escape.mdwn
@@ -32,6 +32,8 @@ escape parameter optional, and only call it if set. --[[Joey]]
 >>> to work -- see <http://ikidev.betacantrips.com/blah.html> for an example.
 >>> --Ethan
 
+[[tag patch]]
+
 <pre>
 Index: debian/changelog
 ===================================================================
