--- a/doc/todo/hard-coded_location_for_man_pages_and_w3m_cgi_wrapper.mdwn
+++ b/doc/todo/hard-coded_location_for_man_pages_and_w3m_cgi_wrapper.mdwn
@@ -12,6 +12,8 @@ while the default stays as it is now.
 > INSTALLMAN1DIR (though MakeMaker lacks one for man8). I'd prefer not
 > adding new variables where MakeMaker already has them. --[[Joey]]
 
+[[tag patch]]
+
 <pre>
 
   - Introduce two variables, IKI_MANDIR and IKI_W3MCGIDIR, to be set from
