--- a/doc/todo/index.html_allowed.mdwn
+++ b/doc/todo/index.html_allowed.mdwn
@@ -3,6 +3,8 @@ providing the usedirs option for output. The remaining patch, discussed
 below, concerns wanting to use foo/index.mdwn source files and get an
 output page name of foo, rather than foo/index. --[[Joey]]
 
+[[tag patch]]
+
 ---
 
 I independently implemented a similar, but smaller patch.
