--- a/doc/todo/more_class__61____34____34___for_css.mdwn
+++ b/doc/todo/more_class__61____34____34___for_css.mdwn
@@ -36,6 +36,8 @@ added after an inlined page (namely: the post date, the tags, and the actions):
     +
     +</div>
 
+[[tag patch]]
+
 > Unfortunately, the inlinepage content passes through markdown, and markdown
 > gets confused by these nested div's and puts p's around one of them, generating
 > broken html. If you can come up with a way to put in the div that passes
