--- a/doc/users/KarlMW/discussion.mdwn
+++ b/doc/users/KarlMW/discussion.mdwn
@@ -13,7 +13,7 @@ things that need changing then I will probably need help/guidance.
 --[[KarlMW]]
 
 > The main problem I see is the html escaping issue. This is not really
-> unique to asciidoc, see [[patchqueue/format_escape]]. I wonder if the
+> unique to asciidoc, see [[todo/format_escape]]. I wonder if the
 > technique provided by that patch could be used to let your plugin
 > automatically handle the escaping. Unfortunatey, I have not yet gotten
 > around to reviewing/applying the patch. --[[Joey]]
