--- a/doc/wishlist.mdwn
+++ b/doc/wishlist.mdwn
@@ -3,4 +3,4 @@ improvements people would like to see in ikiwiki. Good patches for any of
 these will likely be accepted.
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
-link(wishlist) and !todo/*/*" archive=yes show=0]]
+link(wishlist) and !link(patch) and !todo/*/*" archive=yes show=0]]
