--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -14,5 +14,6 @@ orphans.
 [[if test="enabled(orphans)" then="""
 Here's a list of orphaned pages on this wiki:
 
-[[orphans pages="* and !news/* and !todo/* and !bugs/* and !patchqueue/* and !users/* and !examples/*"]]
+[[orphans pages="* and !news/* and !todo/* and !bugs/* and !users/* and
+!examples/* and !tips/*"]]
 """]]
