--- a/doc/sitemap.mdwn
+++ b/doc/sitemap.mdwn
@@ -1,5 +1,5 @@
 This map excludes discussion pages, as well as subpages that are in feeds.
 
 [[map pages="* and !*/discussion
-and !bugs/* and !examples/*/* and !news/* and !patchqueue/* and !plugins/* and !sandbox/* and !todo/* and !users/*
+and !bugs/* and !examples/*/* and !news/* and !tips/* and !plugins/* and !sandbox/* and !todo/* and !users/*
 and !*.css and !*.ico and !*.png and !*.svgz and !*.gif"]]
