--- a/doc/todo/rcs___40__third-party_plugin__41__.mdwn
+++ b/doc/todo/rcs___40__third-party_plugin__41__.mdwn
@@ -3,6 +3,8 @@ I have used it probably over hundred times but needs some work.
 
 <http://www.reedmedia.net/~reed/tmp-sfhkcjkfrfh/rcs.pm>
 
+[[tag patch]]
+
 > Clearly needs some cleanup and perhaps some of the missing stubs
 > implemented, before it can be included into ikiwiki. 
 > 
