--- a/doc/translation.mdwn
+++ b/doc/translation.mdwn
@@ -24,7 +24,7 @@ essentailly three peices needed for a complete translation:
 
 1. The templates also need to be translated. Some work has been done on an
    infrastructure for maintaining translated templates, as documented in
-   [[patchqueue/l10n]], but until that's complete, you'd need to copy and
+   [[todo/l10n]], but until that's complete, you'd need to copy and
    translate the templates by hand.
 
 1. The [[basewiki]] itself needs to be translated. Whether to only translate
