--- a/doc/patch.mdwn
+++ b/doc/patch.mdwn
@@ -2,8 +2,8 @@ Since we have enough people working on ikiwiki to be dangerous, or at least
 to duplicate work without coordination, and since few people have direct
 commit access to the tree, here's a queue of suggested patches.
 
-If you post a patch to the wiki, once it's ready to be applied, add a
-'patch' tag so it will show up here.
+If you post a patch to the [[todo]] or [[bugs]] list, or elsewhere,
+once it's ready to be applied, add a 'patch' tag so it will show up here.
 
 [[inline pages="todo/* and link(patch) and !*/Discussion" rootpage="todo"
 archive="yes"]]
