--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -7,8 +7,7 @@ and instead uses a revision control system such as [[Subversion]].
   It's the best way to find out when there's a new version to [[Download]].
 
 * Ikiwiki has a nice set of wiki [[features]] which can be expanded by
-  a large array of [[plugins]]. It also has some [[bugs]], a [[TODO]] list,
-  and a [[RoadMap]].
+  a large array of [[plugins]].
 
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
@@ -21,14 +20,15 @@ Thanks! --[[Joey]]
   the parameters and usage of the ikiwiki program. There are some
   [[examples]] of things you can do with ikiwiki.
 
+* This wiki is used for tracking ikiwiki's [[TODO]] items, [[bugs]],
+  [[patches]], and its general [[RoadMap]].
+
 * Feel free to post your questions and thoughts about ikiwiki to
   [[Discussion]], or [[contact]] the developers.
 
 * [[Security]] lists potential security problems. ikiwiki is still being
   developed, and is being written with security as a priority, so don't
   expect things to stay in this list for long.
-
-* Developers, please document any ikiwiki [[patches|patch]] you have.
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
