--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -1,7 +1,7 @@
-This is ikiwiki's bug list. Link bugs to [[bugs/done]] when done.
+If you've found a bug in ikiwiki, post about it here. [[TODO]] items go
+elsewhere. Link items to [[bugs/done]] when done.
 
-Also see the [Debian bugs](http://bugs.debian.org/ikiwiki), and the
-[[TODO]] page.
+Also see the [Debian bugs](http://bugs.debian.org/ikiwiki).
 
 [[inline pages="bugs/* and !bugs/done and !bugs/discussion and 
 !link(patch) and !link(bugs/done) and !bugs/*/*"
