--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,6 +1,6 @@
-Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
-
-Also see the [[wishlist]] and [[bugs]] pages.
+Feel free to post your ideas for todo and [[wishlist]] items here.
+If it seems more like a bug in the existing code, post it to [[bugs]]
+instead. Link items to [[todo/done]] when done.
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
 !link(patch) and !link(wishlist) and !todo/*/*"
