--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -21,7 +21,7 @@ Thanks! --[[Joey]]
   [[examples]] of things you can do with ikiwiki.
 
 * This wiki is used for tracking ikiwiki's [[TODO]] items, [[bugs]],
-  [[patches]], and its general [[RoadMap]].
+  [[patches|patch]], and its general [[RoadMap]].
 
 * Feel free to post your questions and thoughts about ikiwiki to
   [[Discussion]], or [[contact]] the developers.
