--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -170,4 +170,5 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
    And in the web interface, RecentChanges should work, and files changed
    by web users will also be committed using revision control.
 
-10. Enjoy your new wiki! Add yourself to [[IkiWikiUsers]].
+10. Enjoy your new wiki! Add yourself to [[IkiWikiUsers]]. And check out
+    [[tips]] to find out how to get more out of ikiwiki.
