--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,35 +1,35 @@
-ikiwiki is a **wiki compiler**. It converts wiki pages
-into HTML pages suitable for publishing on a website. Unlike many
-wikis, ikiwiki does not have its own ad-hoc means of storing page history,
-and instead uses a revision control system such as [[Subversion]].
-
-* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
-  It's the best way to find out when there's a new version to [[Download]].
-
-* Ikiwiki has a nice set of wiki [[features]] which can be expanded by
-  a large array of [[plugins]].
+Ikiwiki is a **wiki compiler**. It converts wiki pages
+into HTML pages suitable for publishing on a website. Ikiwiki stores
+pages and hostory in a revision control system such as [[Subversion]]
+or [[Git]]. There are many other [[features]], including support for
+[[blogging|blog]], as well as a large array of [[plugins]].
 
 [[template id=note text="""
-[[ikiwiki_logo|logo/ikiwiki.png]]  
-[[Version_2.0|news/ikiwiki_version_2.0]] is now available.  
-If you use ikiwiki, please list your wiki in [[IkiWikiUsers]].
-Thanks! --[[Joey]]
+[[ikiwiki_logo|logo/ikiwiki.png]]
+
+Quick links:
+* [[News]]
+* [[Download]]
+* [[Setup]]
+* [[Usage]]
+* [[Security]]
+* [[IkiWikiUsers]]
+* [[Contact]]
 """]]
 
-* [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
-  the parameters and usage of the ikiwiki program. There are some
-  [[examples]] of things you can do with ikiwiki.
+### users
 
-* This wiki is used for tracking ikiwiki's [[TODO]] items, [[bugs]],
-  [[patches|patch]], and its general [[RoadMap]].
-
-* Feel free to post your questions and thoughts about ikiwiki to
-  [[Discussion]], or [[contact]] the developers.
-
-* [[Security]] lists potential security problems. ikiwiki is still being
-  developed, and is being written with security as a priority, so don't
-  expect things to stay in this list for long.
+[[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
+the parameters and usage of the ikiwiki program. There are some
+[[examples]] of things you can do with ikiwiki.
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
-ikiwiki is developed by [[Joey]] and is [[FreeSoftware]].
+## developers
+
+The [[RoadMap]] describes where the project is going.
+[[Bugs]], [[TODO]] items, [[wishlist]] items, and [[patches]]
+can be submitted and tracked using this wiki.
+
+ikiwiki is developed by [[Joey]] and many contributors,
+and is [[FreeSoftware]].
