--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -8,6 +8,7 @@ or [[Git]]. There are many other [[features]], including support for
 [[ikiwiki_logo|logo/ikiwiki.png]]
 
 Quick links:
+
 * [[News]]
 * [[Download]]
 * [[Setup]]
@@ -15,13 +16,14 @@ Quick links:
 * [[Security]]
 * [[IkiWikiUsers]]
 * [[Contact]]
+
 """]]
 
 ### users
 
 [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
 the parameters and usage of the ikiwiki program. There are some
-[[examples]] of things you can do with ikiwiki.
+[[examples]] of things you can do with ikiwiki, and some [[tips]].
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
