--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -6,18 +6,18 @@ or [[Git]]. There are many other [[features]], including support for
 
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
-Quick links:
+Quick links:  
   
-* [[News]]
-* [[Download]]
-* [[Setup]]
-* [[Usage]]
-* [[Security]]
-* [[IkiWikiUsers]]
-* [[Contact]]
+[[News]]  
+[[Download]]  
+[[Setup]]  
+[[Usage]]  
+[[Security]]  
+[[IkiWikiUsers]]  
+[[Contact]]  
 """]]
 
-### users
+### using ikiwiki
 
 [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
 the parameters and usage of the ikiwiki program. There are some
@@ -25,7 +25,7 @@ the parameters and usage of the ikiwiki program. There are some
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
-## developers
+### developer resources
 
 The [[RoadMap]] describes where the project is going.
 [[Bugs]], [[TODO]] items, [[wishlist]] items, and [[patches]]
