--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -6,7 +6,7 @@ or [[Git]]. There are many other [[features]], including support for
 
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
-Quick links:  
+### Quick links:  
 [[News]]  
 [[Download]]  
 [[Setup]]  
