--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -3,10 +3,9 @@ into HTML pages suitable for publishing on a website. Ikiwiki stores
 pages and hostory in a revision control system such as [[Subversion]]
 or [[Git]]. There are many other [[features]], including support for
 [[blogging|blog]], as well as a large array of [[plugins]].
-
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
-### Quick links:  
+Quick links:  
 [[News]]  
 [[Download]]  
 [[Setup]]  
@@ -15,7 +14,6 @@ or [[Git]]. There are many other [[features]], including support for
 [[IkiWikiUsers]]  
 [[Contact]]  
 """]]
-
 ### using ikiwiki
 
 [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
