--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,7 +5,7 @@ or [[Git]]. There are many other [[features]], including support for
 [[blogging|blog]], as well as a large array of [[plugins]].
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
-Quick links:  
+### Quick links:  
 [[News]]  
 [[Download]]  
 [[Setup]]  
