--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,14 +5,14 @@ or [[Git]]. There are many other [[features]], including support for
 [[blogging|blog]], as well as a large array of [[plugins]].
 [[template id=note text="""
 [[ikiwiki_logo|logo/ikiwiki.png]]  
-### Quick links:  
-[[News]]  
-[[Download]]  
-[[Setup]]  
-[[Usage]]  
-[[Security]]  
-[[IkiWikiUsers]]  
-[[Contact]]  
+Quick links:  
+* [[News]]  
+* [[Download]]  
+* [[Setup]]  
+* [[Usage]]  
+* [[Security]]  
+* [[IkiWikiUsers]]  
+* [[Contact]]  
 """]]
 ### using ikiwiki
 
