--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -17,9 +17,9 @@ or [[Git]]. There are many other [[features]], including support for
 
 ### using ikiwiki
 
-[[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
-the parameters and usage of the ikiwiki program. There are some
-[[examples]] of things you can do with ikiwiki, and some [[tips]].
+[[Setup]] has a tutorial for setting up ikiwiki, or you can read the
+[[man_page|usage]]. There are some [[examples]] of things you can do
+ with ikiwiki, and some [[tips]].
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
