--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -9,7 +9,6 @@ or [[Git]]. There are many other [[features]], including support for
 [[News]]  
 [[Download]]  
 [[Setup]]  
-[[Usage]]  
 [[Security]]  
 [[Users|IkiWikiUsers]]  
 [[Contact]]  
@@ -26,7 +25,7 @@ All wikis are supposed to have a [[SandBox]], so this one does too.
 ### developer resources
 
 The [[RoadMap]] describes where the project is going.
-[[Bugs]], [[TODO]] items, [[wishlist]] items, and [[patches]]
+[[Bugs]], [[TODO]] items, [[wishlist]] items, and [[patches|patch]]
 can be submitted and tracked using this wiki.
 
 ikiwiki is developed by [[Joey]] and many contributors,
