--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -1,12 +1,12 @@
 Here's how to get ikiwiki. See [[setup]] for how to use it, and be sure to
 add your wiki to [[IkiwikiUsers]] if you use ikiwiki.
 
-# tarball
+### tarball
 
 The best place to download a tarball of the latest release is from 
 <http://packages.debian.org/unstable/source/ikiwiki>.
 
-# packages
+### packages
 
 If using Debian (since 4.0), or Ubuntu (since 6.10):
 
@@ -28,9 +28,9 @@ Paweł Tęcza, at <http://gpa.net.icm.edu.pl/debian/>.
 Also. FreeBSD has ikiwiki in its
 [ports collection](http://www.freshports.org/www/ikiwiki/).
 
-# revision control
+### revision control
 
-## subversion
+#### subversion
 
 The current development version of ikiwiki can be accessed using subversion at 
 `svn://ikiwiki.info/ikiwiki/trunk`
@@ -43,13 +43,13 @@ Commits to ikiwiki's source code are now fed into
 [project page](http://cia.vc/stats/project/ikiwiki). Note that changes
 to the documentation wiki are currently excluded.
 
-## git
+#### git
 
 A git mirror of the trunk of the subversion repository is available at
 <http://ikiwiki.info/ikiwiki.git/.git>. It is updated whenever
 changes are committed to the subversion repository.
 
-## arch
+#### arch
 
 An unofficial arch mirror of the subversion repository is at
 <http://arch.debian.org/arch/private/srivasta/archive-2006-misc>
