--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -14,7 +14,7 @@ or [[Git]]. There are many other [[features]], including support for
 [[Contact]]  
 """]]
 
-### using ikiwiki
+## using ikiwiki
 
 [[Setup]] has a tutorial for setting up ikiwiki, or you can read the
 [[man_page|usage]]. There are some [[examples]] of things you can do
@@ -22,7 +22,7 @@ or [[Git]]. There are many other [[features]], including support for
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
-### developer resources
+## developer resources
 
 The [[RoadMap]] describes where the project is going.
 [[Bugs]], [[TODO]] items, [[wishlist]] items, and [[patches|patch]]
