--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -4,15 +4,7 @@ pages and history in a revision control system such as [[Subversion]]
 or [[Git]]. There are many other [[features]], including support for
 [[blogging|blog]], as well as a large array of [[plugins]].
 
-[[template id=note text="""
-[[ikiwiki_logo|logo/ikiwiki.png]]  
-[[News]]  
-[[Download]]  
-[[Setup]]  
-[[Security]]  
-[[Users|IkiWikiUsers]]  
-[[Contact]]  
-"""]]
+[[template id=links]]
 
 ## using ikiwiki
 
