--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,6 +1,6 @@
-Feel free to post your ideas for todo and [[wishlist]] items here.
-If it seems more like a bug in the existing code, post it to [[bugs]]
-instead. Link items to [[todo/done]] when done.
+Feel free to post your ideas for todo and [[wishlist]] items here, as well
+as any [[patches|patch]]. If it seems more like a bug in the existing code,
+post it to [[bugs]] instead. Link items to [[todo/done]] when done.
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
 !link(patch) and !link(wishlist) and !todo/*/*"
