web commit by http://adam.shand.net/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -36,6 +36,7 @@ Personal sites and blogs
 * [Sergio Talens-Oliag's personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * [Christian Aichinger's homepage](http://greek0.net/)
 * [Ben A'Lee's homepage](http://bmalee.eu/~bma/)
+* [Adam  Shand's homepage](http://adam.shand.net/iki/)
 * [Recai Oktaş's homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
 * [Stefano Zacchiroli's blog](http://www.bononia.it/~zack/blog/)
