Thank you, Adam Shand!

--- a/doc/tipjar.mdwn
+++ b/doc/tipjar.mdwn
@@ -9,5 +9,6 @@ the following people for their kind contributions:
 
 * James Westby
 * Kyle S MacLea
+* Adam Shand
 
 (Note that this page is locked to prevent anyone from tampering with the PayPal button.)
