--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,11 @@ ikiwiki (2.5) UNRELEASED; urgency=low
   * Fix graphviz plugin to not try to read images as utf-8; they might
     sometimes contain invalid utf-8 byte sequences. Thanks,
     HenrikBrixAndersen.
+  * Fix re-rendering of pages when a linked to page goes away. This was broken
+    in version 1.50 with the addition of %destsources. Thanks, Ethan
+    Glasser-Camp.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 24 Jul 2007 22:14:41 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Jul 2007 15:30:22 -0400
 
 ikiwiki (2.4) unstable; urgency=low
 
